fix alignment

--- a/styles.css
+++ b/styles.css
@@ -32,25 +32,14 @@ a {
 	-moz-text-fill-color: transparent;
 }
 
-.centered {
-	height: 100vh;
-    display: flex;
-    /* justify-content: center; */
-    /* align-items: center; */
-	/* position: fixed;
-	top: 50%;
-	left: 50%;
-	transform: translate(-50%, -50%); */
-}
-
 .main {
 	display: flex;
 	height: 100vh;
-	justify-content: center;
+	/* justify-content: center; */
 	/* flex-direction: column; */
 	flex-wrap: wrap;
 	flex-direction: column;
-	align-content: center;
+	align-items: center;
 }
 
 
